# ravens_nest_elo_bot

./: .gitignore  Dockerfile  README.md  elo_schema.txt  pyproject.toml
src/: elo_core.py  matches.db  players.db  teams.db
src/ravens_nest/: __init__.py  discord_frontend.py  elo_core.py  player_queue.py  test_elo_core.py  test_player_queue.py
