[project]
name = "ravens-nest"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "discord-py>=2.4.0",
    "discord>=2.3.2",
    "rich>=13.8.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.27.0",
]
#dev-dependencies = [
#    "ipython>=8.27.0",
#]

[tool.rye.scripts]
ravens_nest_bot = "python src/ravens_nest/discord_frontend.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ravens_nest"]
